Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11828

font.outline does not appear to work

XMLWordPrintable

    • 5f5c234f7ca57ca1db7b30d358e6c63bf4643c7b

      The code

      Text { color: "blue"; opacity: .4; text: "NOKIA"; font.family: "Impact"; font.pointSize: 20; height: 30; width: 100; font.outline: true }

      fails with error:

      Cannot assign to non-existent property "outline"
               Text { color: "blue"; opacity: .4; text: "NOKIA"; font.pointSize: 20; height: 30; width: 100; font.outline: true }
                                                                                                                  ^
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            martjone Martin Jones (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes