Remove the old font.outline documentation Text.style is the correct property, and this has never been available in TextInput or TextEdit.

Task-number: QTBUG-11828